Almost done with command updates.

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -33,19 +33,15 @@ Acrobatics.SkillName=ACROBATICS
 Acrobatics.Skillup=[[YELLOW]]Acrobatics skill increased by {0}. Total ({1})
 
 #ARCHERY
-Archery.Combat.BonusDamage=[[RED]]Damage+ (Rank{0}): [[YELLOW]]Bonus {0} damage
 Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}%
-Archery.Combat.IgnitionTime=[[RED]]Length of Ignition: [[YELLOW]]{0} seconds
 Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}%
 Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}%
 Archery.Effect.0=Skill Shot
 Archery.Effect.1=Increases damage done with bows
 Archery.Effect.2=Daze (Players)
 Archery.Effect.3=Disorients foes and deals 4 DMG
-Archery.Effect.4=Damage+
-Archery.Effect.5=Modifies Damage
-Archery.Effect.6=Arrow Retrieval
-Archery.Effect.7=Chance to retrieve arrows from corpses
+Archery.Effect.4=Arrow Retrieval
+Archery.Effect.5=Chance to retrieve arrows from corpses
 Archery.Listener=Archery: 
 Archery.SkillName=ARCHERY
 Archery.Skillup=[[YELLOW]]Archery skill increased by {0}. Total ({1})
@@ -54,10 +50,9 @@ Archery.Skillup=[[YELLOW]]Archery skill increased by {0}. Total ({1})
 Axes.Ability.Bonus.0=Axe Mastery
 Axes.Ability.Bonus.1=Bonus {0} damage
 Axes.Ability.Bonus.2=Impact
-Axes.Ability.Bonus.3=Deal {0} bonus DMG to armor
+Axes.Ability.Bonus.3=Deal {0} Bonus DMG to armor
 Axes.Ability.Bonus.4=Greater Impact
 Axes.Ability.Bonus.5=Deal {0} Bonus DMG to unarmored foes
-Axes.Ability.Locked.0=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
 Axes.Ability.Lower=[[GRAY]]**YOU LOWER YOUR AXE**
 Axes.Ability.Ready=[[GREEN]]**YOU READY YOUR AXE**
 Axes.Combat.Cleave.Proc=[[DARK_RED]]Struck by CLEAVE!
@@ -413,7 +408,7 @@ Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
 Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
-mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! Type [[YELLOW]]/mcmmo[[BLUE]] for help.
+mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[BLUE]] for help.
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don't have access to a skill it will not be shown here.
