--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -25,7 +25,7 @@ m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Muokkaa kohdetta
 m.mccMcGod=- "God Mode"
 m.mccSkillInfo=[skillname] [[RED]]- Näytä ykistyiskohtaiset tiedot taidosta
 m.mccModDescription=[[RED]]- Lue lyhyt kuvaus modista
-m.SkillHeader=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
+Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 m.XPGain=[[DARK_GRAY]]KOKEMUSPISTEIDEN MÄÄRÄ: [[WHITE]]{0}
 m.EffectsTemplate=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 m.AbilityLockTemplate=[[GRAY]]{0}
