--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -31,7 +31,7 @@ m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Verander levels
 m.mccMcGod=- God Modus
 m.mccSkillInfo=[skillname] [[RED]]- Laat informatie zien over een skill
 m.mccModDescription=[[RED]]- Lees MOD beschrijving
-m.SkillHeader=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
+Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 m.XPGain=[[DARK_GRAY]]XP: [[WHITE]]{0}
 m.EffectsTemplate=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 m.AbilityLockTemplate=[[GRAY]]{0}
