--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -25,7 +25,7 @@ m.mccMmoedit=[nazwa gracza] [umiejetnosc] [nowa wartosc] [[RED]]- Modyfikuje cel
 m.mccMcGod=- Niesmiertelnosc.
 m.mccSkillInfo=/[nazwa umiejetnosci (np. Mining)] [[RED]]- Wyswietla informacje na temat umiejetnosci.
 m.mccModDescription=[[RED]]- Wyswietla opis moda.
-m.SkillHeader=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
+Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 m.XPGain=[[DARK_GRAY]]Dostajesz doswiadczenie za: [[WHITE]]{0}
 m.EffectsTemplate=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 m.AbilityLockTemplate=[[GRAY]]{0}
