--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -25,7 +25,7 @@ m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Modificar atributos do jog
 m.mccMcGod=- Modo Deus
 m.mccSkillInfo=[skillname] [[RED]]- Ver informaçoes sobre a habilidade
 m.mccModDescription=[[RED]]- Breve descriçao do Mod
-m.SkillHeader=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
+Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 m.XPGain=[[DARK_GRAY]]COMO GANHA XP: [[WHITE]]{0}
 m.EffectsTemplate=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 m.AbilityLockTemplate=[[GRAY]]{0}
