--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -25,7 +25,7 @@ m.mccMmoedit=[playername] [skill] [newvalue] [[YELLOW]]- Ziel modifizieren
 m.mccMcGod=[[YELLOW]]- God Mode
 m.mccSkillInfo=[[WHITE]][skillname] [[YELLOW]]- Detailierte Skillinfos zeigen
 m.mccModDescription=[[YELLOW]]- kurze MOD-Beschreibung lesen
-m.SkillHeader=[[DARK_AQUA]]_______[[YELLOW]] {0} [[DARK_AQUA]]_______
+Skills.Header=[[DARK_AQUA]]_______[[YELLOW]] {0} [[DARK_AQUA]]_______
 m.XPGain=[[DARK_AQUA]]XP [[AQUA]]Erhalten: [[AQUA]]{0}
 m.EffectsTemplate=[[YELLOW]]{0}: [[GREEN]]{1}
 m.AbilityLockTemplate=[[AQUA]]{0}
