--- a/src/main/resources/locale/locale_es_es.properties
+++ b/src/main/resources/locale/locale_es_es.properties
@@ -25,7 +25,7 @@ m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Modifica el objetivo
 m.mccMcGod=- Modo dios
 m.mccSkillInfo=[skillname] [[RED]]- Mira informacion detallada sobre una habilidad
 m.mccModDescription=[[RED]]- Lee la descripcion del MOD
-m.SkillHeader=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
+Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 m.XPGain=[[DARK_GRAY]]GANANCIA DE EXP: [[WHITE]]{0}
 m.EffectsTemplate=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 m.AbilityLockTemplate=[[GRAY]]{0}
