--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -25,7 +25,7 @@ m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Modifier
 m.mccMcGod=- Mode dieu
 m.mccSkillInfo=[skillname] [[RED]]- Afficher des informations détaillées d'une compétence
 m.mccModDescription=[[RED]]- Affiche la description de mcMMO
-m.SkillHeader=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
+Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 m.XPGain=[[DARK_GRAY]]POUR GAGNER DE l'XP: [[WHITE]]{0}
 m.EffectsTemplate=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 m.AbilityLockTemplate=[[GRAY]]{0}
