--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -25,7 +25,7 @@ m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Изменить цель
 m.mccMcGod=- Режим Бога
 m.mccSkillInfo=[skillname] [[RED]]- Посмотреть детальную информацию о умении
 m.mccModDescription=[[RED]]- Прочитать информацию о моде McMMo
-m.SkillHeader=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
+Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 m.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 m.EffectsTemplate=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 m.AbilityLockTemplate=[[GRAY]]{0}
